fix: resolve SonarQube issues in validation module
- Replace generic RuntimeException with SnapshotSerializationException (java:S112)
- Replace Stream.collect(Collectors.toList()) with Stream.toList() (java:S6204)
- Add new SnapshotSerializationException for snapshot serialization errors